--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@
 /vscode projects/some bs/.vs/some bs/FileContentIndex/a62ef7bf-a76b-49c8-8946-82665872a094.vsidx
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/d947b4bd5b333abb/MAIN.ipch
 /vscode projects/some bs/.vs/some bs/v17/.suo
+*.vsidx
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/CL.read.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/Cl.items.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/CL.command.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/CL.write.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/link.command.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/link.read.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/link.write.1.tlog
+/vscode projects/some bs/some bs/x64/Debug/some bs.tlog/some bs.lastbuildstate
+*.log
