--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /vscode projects/some bs/.vs/some bs/FileContentIndex/a62ef7bf-a76b-49c8-8946-82665872a094.vsidx
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/d947b4bd5b333abb/MAIN.ipch
 /vscode projects/some bs/.vs/some bs/v17/.suo
+/vscode projects/some bs/.vs/some bs/FileContentIndex/fb331918-8195-4ea4-bd96-581636cb4a80.vsidx
