--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/d947b4bd5b333abb/MAIN.ipch
 /vscode projects/some bs/.vs/some bs/v17/.suo
 /vscode projects/some bs/.vs/some bs/FileContentIndex/fb331918-8195-4ea4-bd96-581636cb4a80.vsidx
+/vscode projects/some bs/.vs/some bs/FileContentIndex/32a74ece-b09f-4d55-84ac-42417bfd9871.vsidx
