--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/2f599004210449c3/MAIN.ipch
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/4dabf37812226e70/VCTMP8676_822494.MAIN.00000000.HEAD.ipch
 /vscode projects/networking test server/.vs/networking test server/v17/.suo
+*.ipch
