--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,5 @@
 /vscode projects/some bs/.vs/some bs/v17/ipch/AutoPCH/4dabf37812226e70/VCTMP8676_822494.MAIN.00000000.HEAD.ipch
 /vscode projects/networking test server/.vs/networking test server/v17/ipch/AutoPCH/525b59bf48d8b135/VCTMP9080_71147.MAIN.00000000.HEAD.ipch
 /vscode projects/networking test server/.vs/networking test server/v17/ipch/AutoPCH/96e038655035b182/MAIN.ipch
+/.vs/VSWorkspaceState.json
+*.ipch
