--- a/vscode projects/some bs/some bs/some bs.vcxproj.filters
+++ b/vscode projects/some bs/some bs/some bs.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="map.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
