Fixed linker issue with math.cpp

--- a/vscode projects/some bs/some bs/some bs.vcxproj.filters
+++ b/vscode projects/some bs/some bs/some bs.vcxproj.filters
@@ -24,9 +24,6 @@
     <ClCompile Include="map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="headers\math.hpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="math.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -42,6 +39,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="headers\constants.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="headers\math.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
